// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArrowFunctionExpression > client > should skip non-async server functions 1`] = `
{
  "code": "const example = () => {
  'use server';

  return 'foo bar';
};",
  "entries": [],
  "files": Map {},
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpB,YAAY;;EACZ,OAAO,SAAS;AAClB,CAAC",
    "names": [
      "example",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        'use server';
        return 'foo bar';
      };
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ArrowFunctionExpression > client > should skip top-level values for scope 1`] = `
{
  "code": "import { value } from "./example.ts?directive=0.ts";
const outer = () => {
  const example = async () => {
    const _block = (await import("./example.ts?directive=2.ts")).default;
    const [_type, _result, _mutations] = await _block();
    if (_type === 2) {
      return _result;
    } else if (_type === 4) {
      throw _result;
    }
  };
};",
  "entries": [
    "/path/to/example.ts?directive=2.ts",
  ],
  "files": Map {
    "/path/to/example.ts?directive=0.ts" => "export const value = 'foo bar';",
    "/path/to/example.ts?directive=1.ts" => "export default (async function () {
  try {
    return [2, value];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
    "/path/to/example.ts?directive=2.ts" => "import { server as _entry } from "my-example/client";
export default _entry("26ecc3a5-0-example");",
  },
  "map": {
    "file": undefined,
    "mappings": ";AAEM,MAAMA,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,OAAO,GAAG,MAAAA,CAAA;IAAA,MAAAC,MAAA,iDAAAC,OAAA;IAAA,OAAAC,KAAA,EAAAC,OAAA,EAAAC,UAAA,UAAAJ,MAAA;IAAA,IAAAE,KAAA;MAAA,OAAAC,OAAA;IAAA,WAAAD,KAAA;MAAA,MAAAC,OAAA;IAAA;EAAA,CAGf;AACH,CAAC",
    "names": [
      "outer",
      "example",
      "_block",
      "default",
      "_type",
      "_result",
      "_mutations",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      const outer = () => {
        const example = async () => {
          'use server';
          return value;
        };
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?directive=1.ts",
  ],
}
`;

exports[`ArrowFunctionExpression > client > should transform valid server functions 1`] = `
{
  "code": "const example = async () => {
  const _block = (await import("./example.ts?directive=1.ts")).default;
  const [_type, _result, _mutations] = await _block();
  if (_type === 2) {
    return _result;
  } else if (_type === 4) {
    throw _result;
  }
};",
  "entries": [
    "/path/to/example.ts?directive=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?directive=0.ts" => "export default (async function () {
  try {
    return [2, 'foo bar'];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
    "/path/to/example.ts?directive=1.ts" => "import { server as _entry } from "my-example/client";
export default _entry("26ecc3a5-0-example");",
  },
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,OAAO,GAAG,MAAAA,CAAA;EAAA,MAAAC,MAAA,iDAAAC,OAAA;EAAA,OAAAC,KAAA,EAAAC,OAAA,EAAAC,UAAA,UAAAJ,MAAA;EAAA,IAAAE,KAAA;IAAA,OAAAC,OAAA;EAAA,WAAAD,KAAA;IAAA,MAAAC,OAAA;EAAA;AAAA,CAGf",
    "names": [
      "example",
      "_block",
      "default",
      "_type",
      "_result",
      "_mutations",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = async () => {
        'use server';
        return 'foo bar';
      };
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?directive=0.ts",
  ],
}
`;

exports[`ArrowFunctionExpression > client > should transform valid server functions with scope 1`] = `
{
  "code": "const outer = () => {
  const value = 'foo bar';
  const example = async () => {
    const _block = (await import("./example.ts?directive=1.ts")).default;
    const [_type, _result, _mutations] = await _block(value);
    if (_type === 2) {
      return _result;
    } else if (_type === 4) {
      throw _result;
    }
  };
};",
  "entries": [
    "/path/to/example.ts?directive=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?directive=0.ts" => "export default (async function (value) {
  try {
    return [2, value];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
    "/path/to/example.ts?directive=1.ts" => "import { server as _entry } from "my-example/client";
export default _entry("26ecc3a5-0-example");",
  },
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,KAAK,GAAG,SAAS;EACvB,MAAMC,OAAO,GAAG,MAAAA,CAAA;IAAA,MAAAC,MAAA,iDAAAC,OAAA;IAAA,OAAAC,KAAA,EAAAC,OAAA,EAAAC,UAAA,UAAAJ,MAAA,CADVF,KAAK;IAAA,IAAAI,KAAA;MAAA,OAAAC,OAAA;IAAA,WAAAD,KAAA;MAAA,MAAAC,OAAA;IAAA;EAAA,CAIV;AACH,CAAC",
    "names": [
      "outer",
      "value",
      "example",
      "_block",
      "default",
      "_type",
      "_result",
      "_mutations",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const outer = () => {
        const value = 'foo bar';
        const example = async () => {
          'use server';
          return value;
        };
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?directive=0.ts",
  ],
}
`;

exports[`ArrowFunctionExpression > server > should skip non-async server functions 1`] = `
{
  "code": "const example = () => {
  'use server';

  return 'foo bar';
};",
  "entries": [],
  "files": Map {},
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpB,YAAY;;EACZ,OAAO,SAAS;AAClB,CAAC",
    "names": [
      "example",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        'use server';
        return 'foo bar';
      };
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ArrowFunctionExpression > server > should skip top-level values for scope 1`] = `
{
  "code": "import { value } from "./example.ts?directive=0.ts";
const outer = () => {
  const example = async () => {
    const _block = (await import("./example.ts?directive=2.ts")).default;
    const [_type, _result, _mutations] = await _block();
    if (_type === 2) {
      return _result;
    } else if (_type === 4) {
      throw _result;
    }
  };
};",
  "entries": [
    "/path/to/example.ts?directive=2.ts",
  ],
  "files": Map {
    "/path/to/example.ts?directive=0.ts" => "export const value = 'foo bar';",
    "/path/to/example.ts?directive=1.ts" => "import { value } from "./example.ts?directive=0.ts";
export default (async function () {
  try {
    return [2, value];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
    "/path/to/example.ts?directive=2.ts" => "import { server as _entry } from "my-example/server";
import _root from "./example.ts?directive=1.ts";
export default _entry("26ecc3a5-0-example", _root);",
  },
  "map": {
    "file": undefined,
    "mappings": ";AAEM,MAAMA,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,OAAO,GAAG,MAAAA,CAAA;IAAA,MAAAC,MAAA,iDAAAC,OAAA;IAAA,OAAAC,KAAA,EAAAC,OAAA,EAAAC,UAAA,UAAAJ,MAAA;IAAA,IAAAE,KAAA;MAAA,OAAAC,OAAA;IAAA,WAAAD,KAAA;MAAA,MAAAC,OAAA;IAAA;EAAA,CAGf;AACH,CAAC",
    "names": [
      "outer",
      "example",
      "_block",
      "default",
      "_type",
      "_result",
      "_mutations",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      const outer = () => {
        const example = async () => {
          'use server';
          return value;
        };
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?directive=1.ts",
  ],
}
`;

exports[`ArrowFunctionExpression > server > should transform valid server functions 1`] = `
{
  "code": "const example = async () => {
  const _block = (await import("./example.ts?directive=1.ts")).default;
  const [_type, _result, _mutations] = await _block();
  if (_type === 2) {
    return _result;
  } else if (_type === 4) {
    throw _result;
  }
};",
  "entries": [
    "/path/to/example.ts?directive=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?directive=0.ts" => "export default (async function () {
  try {
    return [2, 'foo bar'];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
    "/path/to/example.ts?directive=1.ts" => "import { server as _entry } from "my-example/server";
import _root from "./example.ts?directive=0.ts";
export default _entry("26ecc3a5-0-example", _root);",
  },
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,OAAO,GAAG,MAAAA,CAAA;EAAA,MAAAC,MAAA,iDAAAC,OAAA;EAAA,OAAAC,KAAA,EAAAC,OAAA,EAAAC,UAAA,UAAAJ,MAAA;EAAA,IAAAE,KAAA;IAAA,OAAAC,OAAA;EAAA,WAAAD,KAAA;IAAA,MAAAC,OAAA;EAAA;AAAA,CAGf",
    "names": [
      "example",
      "_block",
      "default",
      "_type",
      "_result",
      "_mutations",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = async () => {
        'use server';
        return 'foo bar';
      };
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?directive=0.ts",
  ],
}
`;

exports[`ArrowFunctionExpression > server > should transform valid server functions with scope 1`] = `
{
  "code": "const outer = () => {
  const value = 'foo bar';
  const example = async () => {
    const _block = (await import("./example.ts?directive=1.ts")).default;
    const [_type, _result, _mutations] = await _block(value);
    if (_type === 2) {
      return _result;
    } else if (_type === 4) {
      throw _result;
    }
  };
};",
  "entries": [
    "/path/to/example.ts?directive=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?directive=0.ts" => "export default (async function (value) {
  try {
    return [2, value];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
    "/path/to/example.ts?directive=1.ts" => "import { server as _entry } from "my-example/server";
import _root from "./example.ts?directive=0.ts";
export default _entry("26ecc3a5-0-example", _root);",
  },
  "map": {
    "file": undefined,
    "mappings": "AACM,MAAMA,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,KAAK,GAAG,SAAS;EACvB,MAAMC,OAAO,GAAG,MAAAA,CAAA;IAAA,MAAAC,MAAA,iDAAAC,OAAA;IAAA,OAAAC,KAAA,EAAAC,OAAA,EAAAC,UAAA,UAAAJ,MAAA,CADVF,KAAK;IAAA,IAAAI,KAAA;MAAA,OAAAC,OAAA;IAAA,WAAAD,KAAA;MAAA,MAAAC,OAAA;IAAA;EAAA,CAIV;AACH,CAAC",
    "names": [
      "outer",
      "value",
      "example",
      "_block",
      "default",
      "_type",
      "_result",
      "_mutations",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const outer = () => {
        const value = 'foo bar';
        const example = async () => {
          'use server';
          return value;
        };
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?directive=0.ts",
  ],
}
`;
